# form-etl

./: .gitignore  README.md  api.py  app.py  docker-compose.yml  pyproject.toml
avro/: form_event.avsc  form_event_raw.avsc  form_field.avsc
form_etl/pipeline/: form_events.py
tests/: test_pipeline_form_events.py
