[tool.poetry]
name = "form-etl"
version = "0.1.0"
description = ""
authors = ["Daniel Stevenson <26047171+daniel-cortez-stevenson@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8.1,<3.11"
apache-beam = "2.51.0"
boto3 = "^1.28.78"
fastavro = "^1.9.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
requests-mock = "^1.11.0"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
fastapi = "^0.104.1"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
